fix list overflow in about for small device

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,3 @@
   width: 90%;
   margin: 0 auto;
 }
-
-/* @media screen and (max-width: 1400px) {
-  .app {
-    width: 100%;
-  }
-} */
